# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,8 @@ import messagesRouter from "./messages";
 import chatRouter from "./chat";
 import storageRouter from "./storage";
 import hadithsRouter from "./hadiths";
+import hadithInteractionsRouter from "./hadith-interactions";
+import userProfileRouter from "./user-profile";
 
 const router: IRouter = Router();
 
@@ -18,9 +20,11 @@ router.use(contentRouter);
 router.use(postsRouter);
 router.use(postInteractionsRouter);
 router.use(hadithsRouter);
+router.use(hadithInteractionsRouter);
 router.use(adminsRouter);
 router.use(messagesRouter);
 router.use(chatRouter);
 router.use(storageRouter);
+router.use(userProfileRouter);
 
 export default router;
